--- a/package.json
+++ b/package.json
@@ -16,5 +16,12 @@
   "bugs": {
     "url": "https://github.com/mylottiv/LIRI-assignment/issues"
   },
-  "homepage": "https://github.com/mylottiv/LIRI-assignment#readme"
+  "homepage": "https://github.com/mylottiv/LIRI-assignment#readme",
+  "dependencies": {
+    "api": "^1.0.0",
+    "axios": "^0.19.0",
+    "dotenv": "^8.1.0",
+    "moment": "^2.24.0",
+    "spotify": "^0.3.0"
+  }
 }
