--- a/package.json
+++ b/package.json
@@ -22,6 +22,6 @@
     "axios": "^0.19.0",
     "dotenv": "^8.1.0",
     "moment": "^2.24.0",
-    "spotify": "^0.3.0"
+    "node-spotify-api": "^1.1.1"
   }
 }
